<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal"
    android:weightSum="7"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/txt_id_1"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/text_title"
        android:textColor="@color/blue"
        android:layout_weight="1.5"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/btn_id_1"
        android:text="@string/btn_txt_1"
        android:textStyle="bold"
        android:textSize="20sp"
        android:drawableStart="@drawable/bangladesh"
        android:backgroundTint="@color/blue"
        android:layout_weight="1"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/btn_id_2"
        android:text="@string/btn_txt_2"
        android:textStyle="bold"
        android:textSize="20sp"
        android:drawableStart="@drawable/china"
        android:backgroundTint="@color/blue"
        android:layout_weight="1"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/btn_id_3"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/btn_txt_3"
        android:drawableStart="@drawable/canada"
        android:backgroundTint="@color/blue"
        android:layout_weight="1"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/btn_id_4"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/btn_txt_4"
        android:drawableStart="@drawable/united_states"
        android:backgroundTint="@color/blue"
        android:layout_weight="1"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/btn_id_5"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/btn_txt_5"
        android:drawableStart="@drawable/australia"
        android:backgroundTint="@color/blue"
        android:layout_weight="1"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exit_btn_id"
        android:text="@string/exit"
        android:backgroundTint="@color/green"
        />

</LinearLayout>