<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/enter"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="15dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_marginEnd="80dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/EditTextId1"
        android:drawableStart="@drawable/ic_verified_user_black_24dp"
        android:hint="@string/enter_user_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:id="@+id/EditTextId2"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:hint="@string/enter_user_name"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButtonId"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:background="#61DD1D"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/attemptTextViewId"
        android:layout_marginTop="10dp"
        android:textStyle="italic"
        android:textColor="#CE0505"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat"
        />

</LinearLayout>